The.Definitive.ANTLR4.Reference/cxx/tour/Java/gen/JavaParser.cpp

// Generated from Java.g4 by ANTLR 4.13.0


#include "JavaListener.h"

#include "JavaParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct JavaParserStaticData final {
  JavaParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  JavaParserStaticData(const JavaParserStaticData&) = delete;
  JavaParserStaticData(JavaParserStaticData&&) = delete;
  JavaParserStaticData& operator=(const JavaParserStaticData&) = delete;
  JavaParserStaticData& operator=(JavaParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag javaParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
JavaParserStaticData *javaParserStaticData = nullptr;

void javaParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (javaParserStaticData != nullptr) {
    return;
  }
#else
  assert(javaParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<JavaParserStaticData>(
    std::vector<std::string>{
      "compilationUnit", "packageDeclaration", "importDeclaration", "typeDeclaration", 
      "classDeclaration", "enumDeclaration", "interfaceDeclaration", "classOrInterfaceModifier", 
      "modifiers", "typeParameters", "typeParameter", "typeBound", "enumBody", 
      "enumConstants", "enumConstant", "enumBodyDeclarations", "normalInterfaceDeclaration", 
      "typeList", "classBody", "interfaceBody", "classBodyDeclaration", 
      "member", "methodDeclaration", "methodDeclarationRest", "genericMethodDeclaration", 
      "fieldDeclaration", "constructorDeclaration", "interfaceBodyDeclaration", 
      "interfaceMemberDecl", "interfaceMethodOrFieldDecl", "interfaceMethodOrFieldRest", 
      "voidMethodDeclaratorRest", "interfaceMethodDeclaratorRest", "interfaceGenericMethodDecl", 
      "voidInterfaceMethodDeclaratorRest", "constantDeclarator", "variableDeclarators", 
      "variableDeclarator", "constantDeclaratorsRest", "constantDeclaratorRest", 
      "variableDeclaratorId", "variableInitializer", "arrayInitializer", 
      "modifier", "packageOrTypeName", "enumConstantName", "typeName", "type", 
      "classOrInterfaceType", "primitiveType", "variableModifier", "typeArguments", 
      "typeArgument", "qualifiedNameList", "formalParameters", "formalParameterDecls", 
      "formalParameterDeclsRest", "methodBody", "constructorBody", "explicitConstructorInvocation", 
      "qualifiedName", "literal", "integerLiteral", "booleanLiteral", "annotations", 
      "annotation", "annotationName", "elementValuePairs", "elementValuePair", 
      "elementValue", "elementValueArrayInitializer", "annotationTypeDeclaration", 
      "annotationTypeBody", "annotationTypeElementDeclaration", "annotationTypeElementRest", 
      "annotationMethodOrConstantRest", "annotationMethodRest", "annotationConstantRest", 
      "defaultValue", "block", "blockStatement", "localVariableDeclarationStatement", 
      "localVariableDeclaration", "variableModifiers", "statement", "catches", 
      "catchClause", "formalParameter", "switchBlock", "switchBlockStatementGroup", 
      "switchLabel", "forControl", "forInit", "enhancedForControl", "forUpdate", 
      "parExpression", "expressionList", "statementExpression", "constantExpression", 
      "expression", "primary", "creator", "createdName", "innerCreator", 
      "explicitGenericInvocation", "arrayCreatorRest", "classCreatorRest", 
      "nonWildcardTypeArguments", "arguments"
    },
    std::vector<std::string>{
      "", "'package'", "';'", "'import'", "'static'", "'.'", "'*'", "'class'", 
      "'extends'", "'implements'", "'public'", "'protected'", "'private'", 
      "'abstract'", "'final'", "'strictfp'", "'<'", "','", "'>'", "'&'", 
      "'{'", "'}'", "'interface'", "'['", "']'", "'void'", "'throws'", "'='", 
      "'native'", "'synchronized'", "'transient'", "'volatile'", "'boolean'", 
      "'char'", "'byte'", "'short'", "'int'", "'long'", "'float'", "'double'", 
      "'\\u003F'", "'super'", "'('", "')'", "'...'", "'this'", "'null'", 
      "'true'", "'false'", "'@'", "'default'", "':'", "'if'", "'else'", 
      "'for'", "'while'", "'do'", "'try'", "'finally'", "'switch'", "'return'", 
      "'throw'", "'break'", "'continue'", "'catch'", "'case'", "'new'", 
      "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'/'", "'%'", "'instanceof'", 
      "'=='", "'!='", "'^'", "'|'", "'&&'", "'||'", "'^='", "'+='", "'-='", 
      "'*='", "'/='", "'&='", "'|='", "'%='", "", "", "", "", "", "", "'enum'", 
      "'assert'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "HexLiteral", "DecimalLiteral", "OctalLiteral", 
      "FloatingPointLiteral", "CharacterLiteral", "StringLiteral", "ENUM", 
      "ASSERT", "Identifier", "COMMENT", "WS", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  javaParserStaticData = staticData.release();
}

}

JavaParser::JavaParser(TokenStream *input) : JavaParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

JavaParser::JavaParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  JavaParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *javaParserStaticData->atn, javaParserStaticData->decisionToDFA, javaParserStaticData->sharedContextCache, options);
}

JavaParser::~JavaParser() {
  delete _interpreter;
}

const atn::ATN& JavaParser::getATN() const {
  return *javaParserStaticData->atn;
}

std::string JavaParser::getGrammarFileName() const {
  return "Java.g4";
}

const std::vector<std::string>& JavaParser::getRuleNames() const {
  return javaParserStaticData->ruleNames;
}

const dfa::Vocabulary& JavaParser::getVocabulary() const {
  return javaParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView JavaParser::getSerializedATN() const {
  return javaParserStaticData->serializedATN;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

JavaParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JavaParser::CompilationUnitContext::EOF() {
  return getToken(JavaParser::EOF, 0);
}

JavaParser::PackageDeclarationContext* JavaParser::CompilationUnitContext::packageDeclaration() {
  return getRuleContext<JavaParser::PackageDeclarationContext>(0);
}

std::vector<JavaParser::ImportDeclarationContext *> JavaParser::CompilationUnitContext::importDeclaration() {
  return getRuleContexts<JavaParser::ImportDeclarationContext>();
}

JavaParser::ImportDeclarationContext* JavaParser::CompilationUnitContext::importDeclaration(size_t i) {
  return getRuleContext<JavaParser::ImportDeclarationContext>(i);
}

std::vector<JavaParser::TypeDeclarationContext *> JavaParser::CompilationUnitContext::typeDeclaration() {
  return getRuleContexts<JavaParser::TypeDeclarationContext>();
}

JavaParser::TypeDeclarationContext* JavaParser::CompilationUnitContext::typeDeclaration(size_t i) {
  return getRuleContext<JavaParser::TypeDeclarationContext>(i);
}


size_t JavaParser::CompilationUnitContext::getRuleIndex() const {
  return JavaParser::RuleCompilationUnit;
}

void JavaParser::CompilationUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompilationUnit(this);
}

void JavaParser::CompilationUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompilationUnit(this);
}

JavaParser::CompilationUnitContext* JavaParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, JavaParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(219);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__0) {
      setState(218);
      packageDeclaration();
    }
    setState(224);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JavaParser::T__2) {
      setState(221);
      importDeclaration();
      setState(226);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(230);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 562949957680276) != 0) || _la == JavaParser::ENUM) {
      setState(227);
      typeDeclaration();
      setState(232);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(233);
    match(JavaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageDeclarationContext ------------------------------------------------------------------

JavaParser::PackageDeclarationContext::PackageDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaParser::QualifiedNameContext* JavaParser::PackageDeclarationContext::qualifiedName() {
  return getRuleContext<JavaParser::QualifiedNameContext>(0);
}


size_t JavaParser::PackageDeclarationContext::getRuleIndex() const {
  return JavaParser::RulePackageDeclaration;
}

void JavaParser::PackageDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPackageDeclaration(this);
}

void JavaParser::PackageDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPackageDeclaration(this);
}

JavaParser::PackageDeclarationContext* JavaParser::packageDeclaration() {
  PackageDeclarationContext *_localctx = _tracker.createInstance<PackageDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, JavaParser::RulePackageDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(235);
    match(JavaParser::T__0);
    setState(236);
    qualifiedName();
    setState(237);
    match(JavaParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportDeclarationContext ------------------------------------------------------------------

JavaParser::ImportDeclarationContext::ImportDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaParser::QualifiedNameContext* JavaParser::ImportDeclarationContext::qualifiedName() {
  return getRuleContext<JavaParser::QualifiedNameContext>(0);
}


size_t JavaParser::ImportDeclarationContext::getRuleIndex() const {
  return JavaParser::RuleImportDeclaration;
}

void JavaParser::ImportDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportDeclaration(this);
}

void JavaParser::ImportDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportDeclaration(this);
}

JavaParser::ImportDeclarationContext* JavaParser::importDeclaration() {
  ImportDeclarationContext *_localctx = _tracker.createInstance<ImportDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, JavaParser::RuleImportDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(239);
    match(JavaParser::T__2);
    setState(241);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__3) {
      setState(240);
      match(JavaParser::T__3);
    }
    setState(243);
    qualifiedName();
    setState(246);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JavaParser::T__4) {
      setState(244);
      match(JavaParser::T__4);
      setState(245);
      match(JavaParser::T__5);
    }
    setState(248);
    match(JavaParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclarationContext ------------------------------------------------------------------

JavaParser::TypeDeclarationContext::TypeDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JavaParser::ClassDeclarationContext* JavaParser::TypeDeclarationContext::classDeclaration() {
  return getRuleContext<JavaParser::ClassDeclarationContext>(0);
}

JavaParser::InterfaceDeclarationContext* JavaParser::TypeDeclarationContext::interfaceDeclaration() {
  return getRuleContext<JavaParser::InterfaceDeclarationContext>(0);
}

JavaParser::EnumDeclarationContext* JavaParser::TypeDeclarationContext::enumDeclaration() {
  return getRuleContext<JavaParser::EnumDeclarationContext>(0);
}

std::vector<JavaParser::ClassOrInterfaceModifierContext *> JavaParser::TypeDeclarationContext::classOrInterfaceModifier() {
  return getRuleContexts<JavaParser::ClassOrInterfaceModifierContext>();
}

JavaParser::ClassOrInterfaceModifierContext* JavaParser::TypeDeclarationContext::classOrInterfaceModifier(size_t i) {
  return getRuleContext<JavaParser::ClassOrInterfaceModifierContext>(i);
}


size_t JavaParser::TypeDeclarationContext::getRuleIndex() const {
  return JavaParser::RuleTypeDeclaration;
}

void JavaParser::TypeDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeDeclaration(this);
}

void JavaParser::TypeDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeDeclaration(this);
}

JavaParser::TypeDeclarationContext* JavaParser::typeDeclaration() {
  TypeDeclarationContext *_localctx = _tracker.createInstance<TypeDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, JavaParser::RuleTypeDeclaration);
